<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.searchandfound.snf.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/main_ueberschrift"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="40dp"
        android:textColor="#e4dc8b"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_slogan"
        android:layout_below="@+id/main_ueberschrift"
        android:layout_centerHorizontal="true"
        android:text="@string/slogan"
        android:textColor="#e4dc8b"
        android:textSize="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/main_email"
        android:layout_below="@+id/main_emaileingabe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/main_hint"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_emaileingabe"
        android:layout_below="@+id/main_slogan"
        android:layout_centerHorizontal="true"
        android:text="@string/emaileingabe"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp" />

    <Button

        android:id="@+id/main_weiterbutton"
        android:layout_below="@+id/main_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:layout_width="220dp"
        android:text="@string/main_weiter_button" />


</RelativeLayout>
