<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.searchandfound.snf.CheckState">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/main_ueberschrift"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="40dp"
        android:textColor="#e4dc8b"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/main_username"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/postal" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_progressbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:background="#ffffff"
        android:layout_below="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/main_email"
        android:layout_alignStart="@+id/main_email"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />
    <Button

        android:id="@+id/register_weiterbutton"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_height="60dp"
        android:layout_width="220dp"
        android:text="@string/createaccount"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/postal"
        android:textAlignment="center"
        android:hint="@string/postal"
        android:layout_below="@+id/main_ueberschrift"
        android:layout_centerHorizontal="true"
        android:background="#FFFF" />


</RelativeLayout>

